# haklander

./: .gitignore
.claude/: settings.local.json
app/: main.py  pyproject.toml  sample.py
app/static/: index.html
mockups/: 01-login.html  02-projects.html  03-plan.html  04-editor.html  mockup-haklander.html  mockup.html
website/: contact.html  expertises.html  index.html  over-ons.html  projecten.html  vacatures.html
website/css/: style.css
website/js/: main.js
