[project]
name = "dxf-chat-editor"
version = "0.1.0"
description = "DXF editor with AI chat interface"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "ezdxf>=1.3.0",
    "anthropic>=0.40.0",
    "python-multipart>=0.0.12",
    "reportlab>=4.2.0",
    "svglib>=1.5.1",
    "matplotlib>=3.9.0",
]

[project.scripts]
serve = "main:run"
